[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/newNode2D.gd" type="Script" id=1]
[ext_resource path="res://Graphics/StartOval.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Oval.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Nunito_extra_bold24.font" type="BitmapFont" id=4]
[ext_resource path="res://Graphics/TopBar.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Nunito_regular20.font" type="BitmapFont" id=6]
[ext_resource path="res://Graphics/TriangleLNormal.png" type="Texture" id=7]
[ext_resource path="res://Graphics/TriangleLPressed.png" type="Texture" id=8]
[ext_resource path="res://Graphics/TriangleLHover.png" type="Texture" id=9]
[ext_resource path="res://Graphics/TriangleRNormal.png" type="Texture" id=10]
[ext_resource path="res://Graphics/TriangleRPressed.png" type="Texture" id=11]
[ext_resource path="res://Graphics/TriangleRHover.png" type="Texture" id=12]
[ext_resource path="res://Graphics/ExaminationTextBox.png" type="Texture" id=13]
[ext_resource path="res://Graphics/dialogueButton.png" type="Texture" id=14]
[ext_resource path="res://Graphics/dialogueButtonPressed.png" type="Texture" id=15]
[ext_resource path="res://Graphics/dialogueButtonHover.png" type="Texture" id=16]
[ext_resource path="res://Graphics/branchButton.png" type="Texture" id=17]
[ext_resource path="res://Graphics/branchButtonPressed.png" type="Texture" id=18]
[ext_resource path="res://Graphics/branchButtonHover.png" type="Texture" id=19]
[ext_resource path="res://Graphics/ZoomInButton.png" type="Texture" id=20]
[ext_resource path="res://Graphics/ZoomInButtonPressed.png" type="Texture" id=21]
[ext_resource path="res://Graphics/ZoomInButtonHover.png" type="Texture" id=22]
[ext_resource path="res://Graphics/ZoomOutButton.png" type="Texture" id=23]
[ext_resource path="res://Graphics/ZoomOutButtonPressed.png" type="Texture" id=24]
[ext_resource path="res://Graphics/ZoomOutButtonHover.png" type="Texture" id=25]
[ext_resource path="res://Graphics/directionOval.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Direction.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Background.png" type="Texture" id=28]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource_name = "FlyIn"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/NinePatchRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1413, 40 ), Vector2( 129, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/NinePatchRect2:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1418, 108 ), Vector2( 134, 108 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/TextureRect:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1317, 28 ), Vector2( 33, 28 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1281.42, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -640.315, 359.26 ), Vector2( 639.471, 359.26 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "FlyOut"
length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/NinePatchRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 129, 40 ), Vector2( -1154, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/NinePatchRect2:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 134, 108 ), Vector2( -1149, 108 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/TextureRect:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, 28 ), Vector2( -1250, 28 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1280.56, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 639.471, 359.26 ), Vector2( 1920.87, 359.26 ) ]
}

[node name="World" type="Node2D"]

light_mask = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z" ]

[node name="Control" type="Control" parent="."]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1213.0
margin_bottom = 647.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="Start" type="TextureRect" parent="Control" groups=[
"Start",
]]

self_modulate = Color( 1, 1, 1, 0.814196 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -30.0
margin_right = -368.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Output" type="TextureRect" parent="Control/Start"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.5
margin_top = -8.5
margin_right = 8.5
margin_bottom = 8.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="Control/Start/Output"]

position = Vector2( 8.6131, 9.1682 )
scale = Vector2( 0.353024, 0.349308 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Start/Output/Area2D"]

position = Vector2( 0.167729, -1.14096 )
scale = Vector2( 2.58334, 2.66283 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="Control/Start"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -41.0
margin_top = -28.0
margin_right = 40.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "START"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Camera2D" type="Camera2D" parent="."]

position = Vector2( 639.471, 359.26 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Transform" ]

[node name="GUI" type="CanvasLayer" parent="."]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TextureFrame" type="TextureRect" parent="GUI"]

editor/display_folded = true
visible = false
self_modulate = Color( 1, 1, 1, 0.792353 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -129.0
margin_top = 15.0
margin_right = 129.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 0

[node name="StoryLabel" type="Label" parent="GUI/TextureFrame"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = 18.0
margin_right = -41.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "Before Ix"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="Left" type="TextureButton" parent="GUI/TextureFrame"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 18.0
margin_top = -12.0
margin_right = 36.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
_sections_unfolded = [ "Margin" ]

[node name="Right" type="TextureButton" parent="GUI/TextureFrame"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -12.0
margin_right = -18.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
_sections_unfolded = [ "Margin" ]

[node name="NinePatchRect" type="NinePatchRect" parent="GUI"]

self_modulate = Color( 0.988281, 0.104233, 0.891588, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 129.0
margin_top = 40.0
margin_right = 378.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 13 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="Buttons1" type="HBoxContainer" parent="GUI/NinePatchRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 11.0
margin_right = -88.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="addDialogue" type="TextureButton" parent="GUI/NinePatchRect/Buttons1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 71.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
_sections_unfolded = [ "Textures" ]

[node name="addBranching" type="TextureButton" parent="GUI/NinePatchRect/Buttons1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_right = 146.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
_sections_unfolded = [ "Textures" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="GUI"]

editor/display_folded = true
self_modulate = Color( 0.484375, 0.484375, 0.484375, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_top = 108.0
margin_right = 329.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 13 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/NinePatchRect2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 91.0
margin_top = 11.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="ZoomIn" type="TextureButton" parent="GUI/NinePatchRect2/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 45.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 22 )
_sections_unfolded = [ "Textures" ]

[node name="ZoomOut" type="TextureButton" parent="GUI/NinePatchRect2/HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_right = 94.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 25 )
_sections_unfolded = [ "Textures" ]

[node name="TextureRect" type="TextureRect" parent="GUI"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 28.0
margin_right = 222.0
margin_bottom = 217.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 26 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Up" type="TextureRect" parent="GUI/TextureRect"]

self_modulate = Color( 0.254902, 0.94902, 1, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -29.5
margin_top = 15.0
margin_right = 28.5
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Textures", "Visibility", "custom_styles" ]

[node name="Right" type="TextureRect" parent="GUI/TextureRect"]

self_modulate = Color( 0.254902, 0.94902, 1, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 80.5
margin_top = 65.0
margin_right = 138.5
margin_bottom = 105.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Textures", "Visibility", "custom_styles" ]

[node name="Down" type="TextureRect" parent="GUI/TextureRect"]

self_modulate = Color( 0.254902, 0.94902, 1, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 28.5
margin_top = 172.0
margin_right = 86.5
margin_bottom = 212.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Textures", "Visibility", "custom_styles" ]

[node name="Left" type="TextureRect" parent="GUI/TextureRect"]

self_modulate = Color( 0.254902, 0.94902, 1, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -80.5
margin_top = 123.0
margin_right = -22.5
margin_bottom = 163.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Textures", "Visibility", "custom_styles" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Panel" type="NinePatchRect" parent="CanvasLayer"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 28 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Material", "Mouse", "Patch Margin", "Rect", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/FlyIn = SubResource( 2 )
anims/FlyOut = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


